test/corpus/blocks.txt
==================
Block with return
==================

{ return x; }

---

(source_file
  (script
    (block
      (return_statement
        (variable
          (identifier))))))

==================
Block with let and return
==================

{ let x = 1; return x; }

---

(source_file
  (script
    (block
      (letdec
        (identifier)
        (literal
          (number)))
      (return_statement
        (variable
          (identifier))))))

==================
Block with multiple lets
==================

{ let x = 1; let y = 2; return {x, y}; }

---

(source_file
  (script
    (block
      (letdec
        (identifier)
        (literal
          (number)))
      (letdec
        (identifier)
        (literal
          (number)))
      (return_statement
        (tuple
          (variable
            (identifier))
          (variable
            (identifier)))))))

==================
Block with typed let
==================

{ let x : Int = 1; return x; }

---

(source_file
  (script
    (block
      (letdec
        (identifier)
        (variable
          (identifier))
        (literal
          (number)))
      (return_statement
        (variable
          (identifier))))))

==================
Block with complex expressions
==================

{ let f = \x -> x + 1; return f 5 : Int; }

---

(source_file
  (script
    (block
      (letdec
        (identifier)
        (lambda
          (params
            (param
              (identifier)))
          (explicit_arrow)
          (operation
            (variable
              (identifier))
            (literal
              (number)))))
      (return_statement
        (annotation
          (application
            (variable
              (identifier))
            (argument
              (literal
                (number))))
          (variable
            (identifier)))))))

==================
Nested blocks
==================

{ return { return x : Type; } : Type; }

---

(source_file
  (script
    (block
      (return_statement
        (annotation
          (block
            (return_statement
              (annotation
                (variable
                  (identifier))
                (literal))))
          (literal))))))

==================
Multiple statements
==================

let x = 1; let y = 2; x

---

(source_file
  (script
    (letdec
      (identifier)
      (literal
        (number)))
    (letdec
      (identifier)
      (literal
        (number)))
    (variable
      (identifier))))

==================
Let with application
==================

let f = g x y

---

(source_file
  (script
    (letdec
      (identifier)
      (application
        (variable
          (identifier))
        (argument
          (variable
            (identifier)))
        (argument
          (variable
            (identifier)))))))

==================
Let with struct value
==================

let r = { x: 1, y: 2 }

---

(source_file
  (script
    (letdec
      (identifier)
      (struct
        (key_value
          (key
            (field))
          (literal
            (number)))
        (key_value
          (key
            (field))
          (literal
            (number)))))))

==================
Statement with return type annotation
==================

{ return f x : Int -> String; }

---

(source_file
  (script
    (block
      (return_statement
        (annotation
          (application
            (variable
              (identifier))
            (argument
              (variable
                (identifier))))
          (arrow
            (variable
              (identifier))
            (explicit)
            (variable
              (identifier))))))))

==================
Using statement
==================

using x : Type

---

(source_file
  (script
    (using
      (annotation
        (variable
          (identifier))
        (literal)))))

==================
Using with alias
==================

using x : Type as myX

---

(source_file
  (script
    (using
      (annotation
        (variable
          (identifier))
        (literal))
      (identifier))))

==================
Foreign declaration
==================

foreign primAdd : Int

---

(source_file
  (script
    (foreign
      (identifier)
      (variable
        (identifier)))))
